<resources>
    <!--<string name="app_name">My Order</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

&lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_in">Sign In</string>
  <string name="open">Open</string>
 <string name="close">Close</string>
<string name="username">Username</string>
    <string name="password">Password</string>
    <string-array name="category">
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Dry Fruits</item>
   </string-array>
-->
    <string name="app_name">私は新鮮な注文</string>

    <string name="action_settings">[設定]</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="signin">ログイン</string>
    <string name="signup">サインアップ</string>

    <string name="username">ユーザー名</string>
    <string name="password">パスワード</string>
    <string-array name="category">
        <item>果物</item>
        <item>野菜</item>
        <item>ドライフルーツ</item>
    </string-array>

    <string name="fruits">果物</string>
    <string name="vegetables">野菜</string>
    <string name="dry_fruits">ドライフルーツ</string>
    <string name="name">名前</string>
    <string name="address">アドレス</string>
   <string name="phonenumber">電話番号</string>
<string name="mail">郵便</string>
<string name="register">登録</string>
<string name="click_for_browser">メールアカウントを選択してください。</string>
    <string-array name="capital">

       <item>India</item>
       <item>India</item>
       <item>India</item>
       <item>India</item>
       <item>India</item>
       <item>India</item>
       <item>India</item>
       <item>India</item>

   </string-array>



    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_regsitration_complete">" Registration complete "</string>
<string name="thanks">私たちと一緒に登録するためのおかげで、私たちは、あなたが私たちのサービスを好き願っています。親切にメールボックスにあなたが郵送チェックや迷惑メールフォルダによって検証する。先に移動するにはこちらをダウンをクリックしてください。
 </string>
    <string name="title_activity_custom_dialog">CustomDialog</string>
    <string name="title_activity_add_items">Choose Category</string>
    <string name="title_activity_selected_items">Selected Items</string>
    <string name="title_activity_dfruits">Dry Fruits</string>
    <string name="title_activity_fruits">Fruits</string>
    <string name="title_activity_vegetables">Vegetables</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_payment_gateway">Payment</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

</resources>
